<resources>

    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_user_name">User Name</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_sign_up">SIGN UP</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_email">Email</string>
    <string name="text_user_name">User Name</string>
    <string name="text_error">Tidak boleh kosong</string>
</resources>