<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/wallpaper_mii" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="@dimen/_305dp"
        android:layout_height="@dimen/_43dp"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/button"
        android:ems="10"
        android:fontFamily="@font/jai"
        android:inputType="text"
        android:paddingStart="@dimen/_30dp"
        android:text="@string/text_email"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="@dimen/_305dp"
        android:layout_height="@dimen/_43dp"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/button"
        android:ems="10"
        android:fontFamily="@font/jai"
        android:inputType="text"
        android:paddingStart="@dimen/_30dp"
        android:text="@string/text_password"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_confirmpassword"
        android:layout_width="@dimen/_305dp"
        android:layout_height="@dimen/_43dp"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/button"
        android:ems="10"
        android:fontFamily="@font/jai"
        android:inputType="text"
        android:paddingStart="@dimen/_30dp"
        android:text="@string/text_confirm_password"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="@dimen/_305dp"
        android:layout_height="@dimen/_43dp"
        android:layout_marginTop="@dimen/_32dp"
        android:background="@drawable/button"
        android:ems="10"
        android:fontFamily="@font/jai"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/_30dp"
        android:text="@string/text_user_name"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/et_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_register"
        app:layout_constraintTop_toBottomOf="@+id/et_register" />

    <TextView
        android:id="@+id/et_register"
        android:layout_width="@dimen/_320dp"
        android:layout_height="@dimen/_84dp"
        android:layout_marginTop="@dimen/_116dp"
        android:fontFamily="@font/monday"
        android:text="@string/text_welcome"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="@dimen/_224dp"
        android:layout_height="@dimen/_47dp"
        android:layout_marginTop="@dimen/_30dp"
        android:background="@drawable/button_sign_up"
        android:paddingStart="@dimen/_75dp"
        android:paddingTop="@dimen/_10dp"
        android:text="@string/text_sign_up"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_confirmpassword"
        app:layout_constraintStart_toStartOf="@+id/et_confirmpassword"
        app:layout_constraintTop_toBottomOf="@+id/et_confirmpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>